# Stocks

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: apk-release.yml  deploy.yml  model-validate.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  celery_app.py  config.py  crypto.py  db.py  institutional_io.py  logger.py  main.py  options_chain_io.py  redis_client.py  timeutil.py
app/api/: deps.py  health.py  signals.py
app/feed/: __main__.py  base.py  kite_ws.py  replay.py
app/models/: __init__.py  instrument.py  signal.py  subscription.py  tick.py  user.py
app/schemas/: signal.py  tick.py
app/signals/: aggregator.py  backtest.py  base.py  publisher.py  registry.py  risk.py
app/signals/layers/: l1_order_flow.py  l2_volume_profile.py  l3_options_flow.py  l4_institutional.py  l5_ml_models.py  l6_stat_arb.py  l7_nlp_sentiment.py  l8_event_driven.py  l9_macro_india.py
app/tasks/: housekeeping.py  institutional.py  options_chain.py  signal_tasks.py
app/telegram/: bot.py
app/tests/: conftest.py  test_aggregator.py  test_backtest_harness.py  test_l1_order_flow.py  test_l2_volume_profile.py  test_l3_options_flow.py  test_l4_institutional.py  test_market_hours.py
nginx/: axiom.conf
scripts/: deploy.sh  nse_holidays.py  seed_universe.py
supervisor/: axiom-api.conf  axiom-beat.conf  axiom-feed.conf  axiom-worker.conf
